<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary">


    <View
        android:id="@+id/bottomView2"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="?colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skillList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/skillsList"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <Switch
        android:id="@+id/switchSkill1"
        style="@style/switchStyle"
        android:layout_marginTop="100dp"
        android:text="@string/skill1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skillList" />

    <Switch
        android:id="@+id/switchSkill2"
        style="@style/switchStyle"
        android:layout_marginTop="24dp"
        android:text="@string/skill2Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSkill1" />

    <Switch
        android:id="@+id/switchSkill3"
        style="@style/switchStyle"
        android:layout_marginTop="24dp"
        android:text="@string/skill3Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSkill2" />

    <Switch
        android:id="@+id/switchSkill4"
        style="@style/switchStyle"
        android:layout_marginTop="24dp"
        android:text="@string/skill4Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSkill3" />

    <Button
        android:id="@+id/skillUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?colorSecondary"
        android:text="@string/updateSkillsButton"
        app:layout_constraintBottom_toTopOf="@+id/bottomView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSkill4" />
</androidx.constraintlayout.widget.ConstraintLayout>